# sistemas-embarcados

./: .gitignore  Build.md  CMakeLists.txt  README.md  build_in_docker.sh
dockerfile/: Dockerfile
dockerfile_arm32/: Dockerfile
dockerfile_riscv64/: Dockerfile  mkjmp.c
dockerfile_x86_64/: Dockerfile
scripts/: build_and_run.sh  build_in_docker.sh
